[gd_scene load_steps=18 format=2]

[ext_resource path="res://character/character4.png" type="Texture" id=1]
[ext_resource path="res://character/char4 lineout.png" type="Texture" id=2]
[ext_resource path="res://character5.gd" type="Script" id=3]
[ext_resource path="res://tilemap/button/dialogbox.png" type="Texture" id=4]
[ext_resource path="res://tilemap/button/xbutton.png" type="Texture" id=5]
[ext_resource path="res://dialog_halo.gd" type="Script" id=6]
[ext_resource path="res://npc4.png" type="Texture" id=7]
[ext_resource path="res://font/fontdefault.tres" type="DynamicFont" id=8]
[ext_resource path="res://dialog_NPC.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="CircleShape2D" id=2]
radius = 17.2627

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "tombolx",
"speed": 3.0
} ]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "tombolx",
"speed": 3.0
} ]

[node name="characterNPC_afnan" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="afnan" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="lineout" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="hud" type="CanvasLayer" parent="."]

[node name="dialog_NPC" type="Sprite" parent="hud"]
pause_mode = 2
visible = false
position = Vector2( 160, 120 )
texture = ExtResource( 4 )
script = ExtResource( 9 )

[node name="Text" type="RichTextLabel" parent="hud/dialog_NPC"]
margin_left = -88.0
margin_top = -24.0
margin_right = 88.0
margin_bottom = 24.0
custom_fonts/normal_font = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="hud/dialog_NPC"]

[node name="tombol" type="TouchScreenButton" parent="hud/dialog_NPC"]
position = Vector2( 80, 16 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 3 )
shape_centered = false
action = "oke"

[node name="tutup" type="AnimatedSprite" parent="hud/dialog_NPC/tombol"]
frames = SubResource( 6 )
animation = "tombolx"
playing = true

[node name="Sprite" type="Sprite" parent="hud/dialog_NPC"]
position = Vector2( -122, -10 )
scale = Vector2( 0.287879, 0.287879 )
texture = ExtResource( 7 )

[node name="dialog_halo" type="Sprite" parent="hud"]
pause_mode = 2
visible = false
position = Vector2( 160, 120 )
texture = ExtResource( 4 )
script = ExtResource( 6 )

[node name="Text" type="RichTextLabel" parent="hud/dialog_halo"]
margin_left = -88.0
margin_top = -24.0
margin_right = 88.0
margin_bottom = 24.0
custom_fonts/normal_font = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="hud/dialog_halo"]
position = Vector2( -122, -10 )
scale = Vector2( 0.287879, 0.287879 )
texture = ExtResource( 7 )

[node name="tombol2" type="TouchScreenButton" parent="hud/dialog_halo"]
position = Vector2( 80, 16 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 7 )
shape_centered = false
action = "oke"

[node name="tutup" type="AnimatedSprite" parent="hud/dialog_halo/tombol2"]
frames = SubResource( 8 )
animation = "tombolx"
frame = 1
playing = true

[node name="Timer" type="Timer" parent="hud/dialog_halo"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="hud/dialog_NPC/tombol" to="hud/dialog_NPC" method="_on_tombol_pressed"]
[connection signal="pressed" from="hud/dialog_halo/tombol2" to="hud/dialog_halo" method="_on_tombol2_pressed"]
